Fixed some plex api album art search errors for + and & symbols, added clear search history for device ips, wrapped error in setNot dispatch

--- a/src/index.css
+++ b/src/index.css
@@ -48,6 +48,7 @@
     grid-column: 2 / 3;
     grid-row: 1 / 2;
     grid-template-rows: auto auto minmax(0, 1fr);
+    grid-template-columns: 4fr 1fr;
     min-height: 0;
 }
 .connectedPrompt {
